Fix some CSS for more consistency and correct Showjumping to one word.

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 
 .fa,
 .fas {
-    opacity: .7;
+    opacity: .5;
 }
 
 .book-number {
@@ -54,7 +54,7 @@ cite::before {
 
 button {
     color: white;
-    background: #444;
+    background: #4448;
     padding: .5em 1.5em;
     border: none;
     outline: none;
@@ -102,4 +102,10 @@ button[disabled] {
 .title-and-author {
     width: 80%;
     text-align: center;
+}
+
+.wrapper {
+    padding: 2rem 3rem;
+    box-shadow: -3px -3px 15px #ccc2, -5px -5px 30px #ccc2, 3px 3px 15px #000a, 5px 5px 30px #000a;
+    border-radius: 50px;
 }
